--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>teste github</title>
+  <title>teste github alterado</title>
 </head>
 <body>
-  
+  <h1>alteração feita</h1>
+  <h2>tutor adcionado</h2>
+  <p>proximos passos?</p>
 </body>
 </html>
